# mi-fitness-mcp-cn

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mcp-server-config.example.json  probe_mifitness.py  pyproject.toml
.github/workflows/: ci.yml
src/mi_fitness_mcp/: __init__.py  cli_mi_fitness.py  config.py  main.py  server.py
src/mi_fitness_mcp/adapters/: base.py  mi_fitness_cloud.py
src/mi_fitness_mcp/auth/: __init__.py
src/mi_fitness_mcp/models/: __init__.py
src/mi_fitness_mcp/services/: __init__.py  autosync.py  query_service.py  sync_service.py
src/mi_fitness_mcp/storage/: __init__.py
tests/: test_config.py  test_mi_fitness_cloud.py  test_storage_query.py
