[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mi-fitness-mcp"
version = "0.1.0"
description = "MCP server for Mi Fitness data access"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Aleksej Kubulashvili", email = "kubulashvili@users.noreply.github.com"},
]
keywords = ["mcp", "model-context-protocol", "mi-fitness", "xiaomi", "fitness", "health"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "platformdirs>=4.0.0",
    "keyring>=25.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
mi-fitness-mcp = "mi_fitness_mcp.cli_mi_fitness:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mi_fitness_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
